--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -57,4 +57,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VERILOG_FILE or_32_gate.v
 set_global_assignment -name VERILOG_FILE not_32_gate.v
 set_global_assignment -name VERILOG_FILE shr_32_gate.v
+set_global_assignment -name VERILOG_FILE shl_32_gate.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
