--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -52,7 +52,6 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name BDF_FILE DesignProject.bdf
@@ -62,3 +61,5 @@ set_global_assignment -name VERILOG_FILE or_32_gate.v
 set_global_assignment -name VERILOG_FILE not_32_gate.v
 set_global_assignment -name VERILOG_FILE shr_32_gate.v
 set_global_assignment -name VERILOG_FILE shl_32_gate.v
+set_global_assignment -name VERILOG_FILE sub_32_gate.v
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
