--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -54,7 +54,9 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name BDF_FILE DesignProject.bdf
+set_global_assignment -name VERILOG_FILE rol_32_gate.v
 set_global_assignment -name VERILOG_FILE add_32_gate.v
 set_global_assignment -name VERILOG_FILE and_32_gate.v
 set_global_assignment -name VERILOG_FILE or_32_gate.v
@@ -62,4 +64,4 @@ set_global_assignment -name VERILOG_FILE not_32_gate.v
 set_global_assignment -name VERILOG_FILE shr_32_gate.v
 set_global_assignment -name VERILOG_FILE shl_32_gate.v
 set_global_assignment -name VERILOG_FILE sub_32_gate.v
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE div_32_gate.v
