--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -56,6 +56,7 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name BDF_FILE DesignProject.bdf
+set_global_assignment -name VERILOG_FILE ror_32_gate.v
 set_global_assignment -name VERILOG_FILE rol_32_gate.v
 set_global_assignment -name VERILOG_FILE add_32_gate.v
 set_global_assignment -name VERILOG_FILE and_32_gate.v
