--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP3C16F484C6
 set_global_assignment -name TOP_LEVEL_ENTITY DesignProject
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:11:23  FEBRUARY 06, 2022"
-set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -65,4 +65,5 @@ set_global_assignment -name VERILOG_FILE shr_32_gate.v
 set_global_assignment -name VERILOG_FILE shl_32_gate.v
 set_global_assignment -name VERILOG_FILE sub_32_gate.v
 set_global_assignment -name VERILOG_FILE div_32_gate.v
+set_global_assignment -name VERILOG_FILE regsiter.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
