--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -66,4 +66,5 @@ set_global_assignment -name VERILOG_FILE shl_32_gate.v
 set_global_assignment -name VERILOG_FILE sub_32_gate.v
 set_global_assignment -name VERILOG_FILE div_32_gate.v
 set_global_assignment -name VERILOG_FILE regsiter.v
+set_global_assignment -name VERILOG_FILE MDR.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
