--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -54,7 +54,13 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name BDF_FILE DesignProject.bdf
+set_global_assignment -name VERILOG_FILE datapath.v
+set_global_assignment -name VERILOG_FILE Register.v
+set_global_assignment -name VERILOG_FILE neg_32_gate.v
+set_global_assignment -name VERILOG_FILE mul_32_gate.v
+set_global_assignment -name VERILOG_FILE ALU.v
 set_global_assignment -name VERILOG_FILE ror_32_gate.v
 set_global_assignment -name VERILOG_FILE rol_32_gate.v
 set_global_assignment -name VERILOG_FILE add_32_gate.v
@@ -65,7 +71,4 @@ set_global_assignment -name VERILOG_FILE shr_32_gate.v
 set_global_assignment -name VERILOG_FILE shl_32_gate.v
 set_global_assignment -name VERILOG_FILE sub_32_gate.v
 set_global_assignment -name VERILOG_FILE div_32_gate.v
-set_global_assignment -name VERILOG_FILE regsiter.v
 set_global_assignment -name VERILOG_FILE MDR.v
-set_global_assignment -name VERILOG_FILE datapath.v
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
