--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -51,6 +51,14 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_TIME_SCALE "100 ns" -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH DesignProject_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME DesignProject_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id DesignProject_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "500 ns" -section_id DesignProject_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME DesignProject_tb -section_id DesignProject_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE DesignProject_tb.v -section_id DesignProject_tb
 set_global_assignment -name BDF_FILE DesignProject.bdf
 set_global_assignment -name VERILOG_FILE datapath.v
 set_global_assignment -name VERILOG_FILE Register.v
@@ -69,9 +77,9 @@ set_global_assignment -name VERILOG_FILE sub_32_gate.v
 set_global_assignment -name VERILOG_FILE div_32_gate.v
 set_global_assignment -name VERILOG_FILE MDR.v
 set_global_assignment -name VERILOG_FILE BUS.v
+set_global_assignment -name VERILOG_FILE DesignProject_tb.v
+set_global_assignment -name VERILOG_FILE IncPCModule.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VERILOG_FILE DesignProject.v
-set_global_assignment -name VERILOG_FILE DesignProject_tb.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
