--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP3C16F484C6
 set_global_assignment -name TOP_LEVEL_ENTITY datapath
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:11:23  FEBRUARY 06, 2022"
-set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -62,27 +62,12 @@ set_global_assignment -name EDA_TEST_BENCH_FILE DesignProject_tb.v -section_id D
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name BDF_FILE DesignProject.bdf
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VERILOG_FILE select_encode_logic.v
 set_global_assignment -name VERILOG_FILE datapath.v
 set_global_assignment -name VERILOG_FILE Register.v
-set_global_assignment -name VERILOG_FILE neg_32_gate.v
-set_global_assignment -name VERILOG_FILE mul_32_gate.v
 set_global_assignment -name VERILOG_FILE ALU.v
-set_global_assignment -name VERILOG_FILE ror_32_gate.v
-set_global_assignment -name VERILOG_FILE rol_32_gate.v
-set_global_assignment -name VERILOG_FILE add_32_gate.v
-set_global_assignment -name VERILOG_FILE and_32_gate.v
-set_global_assignment -name VERILOG_FILE or_32_gate.v
-set_global_assignment -name VERILOG_FILE not_32_gate.v
-set_global_assignment -name VERILOG_FILE shr_32_gate.v
-set_global_assignment -name VERILOG_FILE shl_32_gate.v
-set_global_assignment -name VERILOG_FILE sub_32_gate.v
-set_global_assignment -name VERILOG_FILE div_32_gate.v
 set_global_assignment -name VERILOG_FILE MDR.v
 set_global_assignment -name VERILOG_FILE BUS.v
-set_global_assignment -name VERILOG_FILE DesignProject_tb.v
-set_global_assignment -name VERILOG_FILE IncPCModule.v
 set_global_assignment -name QIP_FILE ram.qip
 set_global_assignment -name HEX_FILE memory.hex
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
