--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -62,6 +62,8 @@ set_global_assignment -name EDA_TEST_BENCH_FILE DesignProject_tb.v -section_id D
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE ram.v
 set_global_assignment -name VERILOG_FILE select_encode_logic.v
 set_global_assignment -name VERILOG_FILE datapath.v
 set_global_assignment -name VERILOG_FILE Register.v
@@ -70,4 +72,5 @@ set_global_assignment -name VERILOG_FILE MDR.v
 set_global_assignment -name VERILOG_FILE BUS.v
 set_global_assignment -name QIP_FILE ram.qip
 set_global_assignment -name HEX_FILE memory.hex
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE Register_0.v
+set_global_assignment -name VERILOG_FILE MAR.v
