--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -92,4 +92,8 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE DesignProject_tb.v -section_id DesignProject_tb
+set_global_assignment -name VERILOG_FILE addi_tb.v
+set_global_assignment -name VERILOG_FILE ld_tb.v
+set_global_assignment -name VERILOG_FILE jr_tb.v
+set_global_assignment -name VERILOG_FILE andi_tb.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
