--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -97,3 +97,4 @@ set_global_assignment -name VERILOG_FILE ld_tb.v
 set_global_assignment -name VERILOG_FILE jr_tb.v
 set_global_assignment -name VERILOG_FILE andi_tb.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE ori_tb.v
