--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -98,4 +98,6 @@ set_global_assignment -name VERILOG_FILE jr_tb.v
 set_global_assignment -name VERILOG_FILE andi_tb.v
 set_global_assignment -name VERILOG_FILE ori_tb.v
 set_global_assignment -name VERILOG_FILE ldi_tb.v
+set_global_assignment -name VERILOG_FILE st_tb.v
+set_global_assignment -name VERILOG_FILE mflo_tb.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
