--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -100,4 +100,7 @@ set_global_assignment -name VERILOG_FILE ori_tb.v
 set_global_assignment -name VERILOG_FILE ldi_tb.v
 set_global_assignment -name VERILOG_FILE st_tb.v
 set_global_assignment -name VERILOG_FILE mflo_tb.v
+set_global_assignment -name VERILOG_FILE mfhi_tb.v
+set_global_assignment -name VERILOG_FILE outPort_tb.v
+set_global_assignment -name VERILOG_FILE inPort_tb.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
