--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -58,6 +58,12 @@ set_global_assignment -name EDA_TEST_BENCH_NAME DesignProject_tb -section_id eda
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id DesignProject_tb
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "500 ns" -section_id DesignProject_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME DesignProject_tb -section_id DesignProject_tb
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_FILE DesignProject_tb.v -section_id DesignProject_tb
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE jal_tb.v
 set_global_assignment -name VERILOG_FILE datapath.v
 set_global_assignment -name VERILOG_FILE DesignProject_tb.v
 set_global_assignment -name VERILOG_FILE ram.v
@@ -88,10 +94,6 @@ set_global_assignment -name VERILOG_FILE BUS.v
 set_global_assignment -name HEX_FILE memory.hex
 set_global_assignment -name VERILOG_FILE Register_0.v
 set_global_assignment -name QIP_FILE ram.qip
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name EDA_TEST_BENCH_FILE DesignProject_tb.v -section_id DesignProject_tb
 set_global_assignment -name VERILOG_FILE addi_tb.v
 set_global_assignment -name VERILOG_FILE ld_tb.v
 set_global_assignment -name VERILOG_FILE jr_tb.v
@@ -103,4 +105,3 @@ set_global_assignment -name VERILOG_FILE mflo_tb.v
 set_global_assignment -name VERILOG_FILE mfhi_tb.v
 set_global_assignment -name VERILOG_FILE outPort_tb.v
 set_global_assignment -name VERILOG_FILE inPort_tb.v
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
