phase 3 almost done, ram doesnt work

--- a/DesignProject.qsf
+++ b/DesignProject.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP3C16F484C6
 set_global_assignment -name TOP_LEVEL_ENTITY datapath
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:11:23  FEBRUARY 06, 2022"
-set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -58,16 +58,22 @@ set_global_assignment -name EDA_TEST_BENCH_NAME DesignProject_tb -section_id eda
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id DesignProject_tb
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "500 ns" -section_id DesignProject_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME DesignProject_tb -section_id DesignProject_tb
+
+set_global_assignment -name EDA_TEST_BENCH_NAME control_unit.v -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id control_unit.v
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME control_unit.v -section_id control_unit.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE DesignProject_tb.v -section_id DesignProject_tb
-
+set_global_assignment -name EDA_TEST_BENCH_FILE control_unit.v -section_id control_unit.v
+set_global_assignment -name QIP_FILE ram2.qip
+set_global_assignment -name VERILOG_FILE ram2_bb.v
+set_global_assignment -name VERILOG_FILE ram2.v
 set_global_assignment -name VERILOG_FILE jal_tb.v
 set_global_assignment -name HEX_FILE memory.hex
 set_global_assignment -name VERILOG_FILE datapath.v
 set_global_assignment -name VERILOG_FILE DesignProject_tb.v
-set_global_assignment -name VERILOG_FILE ram.v
 set_global_assignment -name VERILOG_FILE control_unit.v
 set_global_assignment -name VERILOG_FILE MAR.v
 set_global_assignment -name VERILOG_FILE CON_FF.v
@@ -94,7 +100,6 @@ set_global_assignment -name VERILOG_FILE ALU.v
 set_global_assignment -name VERILOG_FILE MDR.v
 set_global_assignment -name VERILOG_FILE BUS.v
 set_global_assignment -name VERILOG_FILE Register_0.v
-set_global_assignment -name QIP_FILE ram.qip
 set_global_assignment -name VERILOG_FILE addi_tb.v
 set_global_assignment -name VERILOG_FILE ld_tb.v
 set_global_assignment -name VERILOG_FILE jr_tb.v
